fixed about me issue on mobile, hopefully

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1349,7 +1349,6 @@ footer:before {
   }
   section.main {
     background-color: rgba(150, 101, 115, 0.9);
-    margin-top: 85%;
   }
   article {
     width: 80%;
@@ -1395,13 +1394,3 @@ footer:before {
   }
 }
 
-@media screen and (height:900px) and (width:1440px) {
-  section.main {
-   margin-top: 54%;
-  }
-}
-
-@media screen and (max-device-height: 736px) and (max-device-width: 414px) {
-    section.main {
-  }
-}
